--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <title>Myckaell</title>
     </head>
     <body>
-        
-
-
+        <header>
+            <img src="images/mlogo.jpg" alt="M Logo" width="100" height="100">
+        </header>
     </body>
 </html>
