--- a/index.html
+++ b/index.html
@@ -10,5 +10,19 @@
         <header>
             <img src="images/mlogo.jpg" alt="M Logo" width="100" height="100">
         </header>
+        <main>
+            <h1>Welcome to my web site!</h1>
+            <h2>myxkaell.github.io</h2>
+            <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed unde veniam nesciunt voluptates alias enim tempore, eaque vel placeat deleniti nihil quisquam omnis a nisi, aspernatur eius magnam explicabo laudantium!</h3>
+            <nav>
+                <ul>
+                    <li>Education</li>
+                    <li>Work Experience</li>
+                    <li>Knowledge and Skills</li>
+                    <li>Certifications</li>
+                    <li>Class Projects</li>
+                </ul>
+            </nav>
+        </main>
     </body>
 </html>
