Finished main and footer

--- a/index.html
+++ b/index.html
@@ -20,9 +20,17 @@
                     <li>Work Experience</li>
                     <li>Knowledge and Skills</li>
                     <li>Certifications</li>
-                    <li>Class Projects</li>
+                    <li><a href="#">Class Projects</a></li>
                 </ul>
             </nav>
+            <p>Resume: <a href="files/Resume.docx">Here</a></p>
+            <p>Roblox: <a href="https://www.roblox.com/users/348188721/profile" target="_blank">Here</a></p>
+            <p><em>Email: <a href="mailto:myxkaell@gmail.com">myxkaell@gmail.com</a></em></p>
         </main>
+        <br>
+        <hr>
+        <footer>
+            <p>&copy; 2023 Myckaell Silva</p>
+        </footer>
     </body>
 </html>
