--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li><a href="#">Class Projects</a></li>
                 </ul>
             </nav>
-            <p>Resume: <a href="files/Resume.pdf">Here</a></p>
+            <p>Resume: <a href="files/resume.docs">Here</a></p>
             <p>Roblox: <a href="https://www.roblox.com/users/348188721/profile" target="_blank">Here</a></p>
             <p><em>Email: <a href="mailto:myxkaell@gmail.com">myxkaell@gmail.com</a></em></p>
         </main>
