--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
         <meta name="description" content="Myckaell's personal website">
         <meta name="keywords" content="Myckaell, SHSU, Sam Houston State University, Management Information Systems">
         <title>Myckaell</title>
+        <link rel="stylesheet" href="styles/main.css"
     </head>
     <body>
-        <header>
+        <header class>
             <img src="images/mlogo.jpg" alt="M Logo" width="100" height="100">
+            <h1 class="shadow">Welcome to my web site!</h1>
+            <h2 class="shadow">myxkaell.github.io</h2>
         </header>
         <main>
-            <h1>Welcome to my web site!</h1>
-            <h2>myxkaell.github.io</h2>
             <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed unde veniam nesciunt voluptates alias enim tempore, eaque vel placeat deleniti nihil quisquam omnis a nisi, aspernatur eius magnam explicabo laudantium!</h3>
             <nav>
-                <ul>
+                <ul id="list">
                     <li>Education</li>
                     <li>Work Experience</li>
                     <li>Knowledge and Skills</li>
@@ -29,7 +30,7 @@
         </main>
         <br>
         <hr>
-        <footer>
+        <footer class="copyright">
             <p>&copy; 2023 Myckaell Silva</p>
         </footer>
     </body>
