--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         </main>
         <br>
         <hr>
-        <footer class="copyright">
-            <p>&copy; 2023 Myckaell Silva</p>
+        <footer>
+            <p class="copyright">&copy; 2023 Myckaell Silva</p>
         </footer>
     </body>
 </html>
