--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
                     <li><a href="#">Class Projects</a></li>
                 </ul>
             </nav>
-            <p>Resume: <a href="files/resume.docx">Here</a></p>
-            <p>Roblox: <a href="https://www.roblox.com/users/348188721/profile" target="_blank">Here</a></p>
-            <p><em>Email: <a href="mailto:myxkaell@gmail.com">myxkaell@gmail.com</a></em></p>
+            <div class="contact">
+                <p>Resume: <a href="files/resume.docx">Here</a></p>
+                <p>Roblox: <a href="https://www.roblox.com/users/348188721/profile" target="_blank">Here</a></p>
+                <p><em>Email: <a href="mailto:myxkaell@gmail.com">myxkaell@gmail.com</a></em></p>
+            </div>
         </main>
         <br>
         <hr>
