--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="description" content="Myckaell's personal website">
         <meta name="keywords" content="Myckaell, SHSU, Sam Houston State University, Management Information Systems">
         <title>Myckaell</title>
-        <link rel="stylesheet" href="styles/main.css"
+        <link rel="stylesheet" href="styles/main.css">
     </head>
     <body>
         <header class>
