--- a/rwd.html
+++ b/rwd.html
@@ -25,7 +25,7 @@
     </section>
     <article>
         <h2>About Me</h2>
-        <a href="https://wallup.net/landscape-nature-beautiful-area-wild-sky-landscapes-132/"><img src="images/landscape.jpg" width="50%"></a>
+        <a href="https://wallup.net/landscape-nature-beautiful-area-wild-sky-landscapes-132/"><img src="images/landscape.jpg" alt="Landscape Image"></a>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto, reprehenderit alias impedit assumenda omnis vel aut maxime aperiam asperiores nobis quidem magni earum exercitationem illum laudantium quaerat distinctio hic totam voluptas repudiandae sint similique. Voluptate amet iusto nesciunt doloribus dignissimos cum tempore nisi, asperiores, sapiente sunt explicabo architecto mollitia enim neque. Accusamus exercitationem nemo veniam sint laboriosam quae earum, iure placeat veritatis itaque reprehenderit quos impedit ratione neque sit quidem. Vitae necessitatibus nobis maxime tempore! Architecto perferendis laborum blanditiis? In praesentium eius maxime architecto consequatur animi rerum placeat eum molestiae totam porro, dicta saepe! Beatae similique praesentium animi ab vitae.</p>
     </article>
     <footer>
