--- a/jsdemo.html
+++ b/jsdemo.html
@@ -28,6 +28,7 @@
         const html3 = `<p>Width: ${width}</p>
                         <p>Height: ${height}</p>
                         <p>Area: ${area.toFixed(3)}</p>`;
+        document.write(html3);
     </script>
 
 </body>
