--- a/jsdemo.html
+++ b/jsdemo.html
@@ -27,7 +27,7 @@
         const area = parseFloat(width*height);
         const html3 = `<p>Width: ${width}</p>
                         <p>Height: ${height}</p>
-                        <p>Area: ${area.toFixed(3)}</p>`;
+                        <h4>Area: ${area.toFixed(3)}</h4>`;
         document.write(html3);
     </script>
 
