--- a/form.html
+++ b/form.html
@@ -52,36 +52,36 @@
         <option value="junior">Junior</option>
         <option value="regular">Regular</option>
         <option value="charter">Charter</option>
-    </select>
+    </select><br>
     <label for="start_date">Starting Date:</label>
-    <input type="date" name="start_date" id="start_date" required>
+    <input type="date" name="start_date" id="start_date" required><br>
     <label for="ticket_count">Number of Tickets:</label>
     <input type="number" name="ticket_count" id="ticket_count"
         min="1"
         max="4"
         step="1"
-        value="2">
+        value="2"><br>
 </fieldset>
 <fieldset>
     <legend>How Did You Hear About Us?</legend>
-    <input type="checkbox" name="search_engine" id="search_engine" value="search_engine">
+    <input type="checkbox" name="search_engine" id="search_engine" value="search_engine"><br>
     <label for="search_engine">Search Engine</label>
-    <input type="checkbox" name="social_media" id="social_media" value="social_media">
+    <input type="checkbox" name="social_media" id="social_media" value="social_media"><br>
     <label for="social_media">Social Media</label>
-    <input type="checkbox" name="email" id="email" value="email">
+    <input type="checkbox" name="email" id="email" value="email"><br>
     <label for="email">Email</label>
-    <input type="checkbox" name="friend" id="friend" value="friend">
+    <input type="checkbox" name="friend" id="friend" value="friend"><br>
     <label for="">Friend or colleague</label>
 </fieldset>
 <fieldset>
     <legend>Comments</legend>
     <input type="text" name="comments" id="comments" 
-    placeholder="If you have any comments, please enter them here.">
+    placeholder="If you have any comments, please enter them here."><br>
 </fieldset>
 <fieldset>
     <legend>Submit Your Membership</legend>
-    <input type="submit" name="submit" id="submit" value="Submit">
-    <input type="reset" name="reset" id="reset" value="Reset Fields">
+    <input type="submit" name="submit" id="submit" value="Submit" class="buttons">
+    <input type="reset" name="reset" id="reset" value="Reset Fields" class="buttons">
 </fieldset>
     
 </body>
