--- a/form.html
+++ b/form.html
@@ -64,7 +64,7 @@
 </fieldset>
 <fieldset>
     <legend>How Did You Hear About Us?</legend>
-    <input type="checkbox" name="search_engine" id="search_engine" value="search_engine"><br>
+    <input type="checkbox" name="search_engine" id="search_engine" value="search_engine">
     <label for="search_engine">Search Engine</label>
     <input type="checkbox" name="social_media" id="social_media" value="social_media"><br>
     <label for="social_media">Social Media</label>
