--- a/form.html
+++ b/form.html
@@ -66,11 +66,11 @@
     <legend>How Did You Hear About Us?</legend>
     <input type="checkbox" name="search_engine" id="search_engine" value="search_engine">
     <label for="search_engine">Search Engine</label>
-    <input type="checkbox" name="social_media" id="social_media" value="social_media"><br>
+    <input type="checkbox" name="social_media" id="social_media" value="social_media">
     <label for="social_media">Social Media</label>
-    <input type="checkbox" name="email" id="email" value="email"><br>
+    <input type="checkbox" name="email" id="email" value="email">
     <label for="email">Email</label>
-    <input type="checkbox" name="friend" id="friend" value="friend"><br>
+    <input type="checkbox" name="friend" id="friend" value="friend">
     <label for="">Friend or colleague</label>
 </fieldset>
 <fieldset>
