--- a/form.html
+++ b/form.html
@@ -70,7 +70,7 @@
     <label for="social_media">Social Media</label>
     <input type="checkbox" name="email" id="email" value="email">
     <label for="email">Email</label>
-    <input type="checkbox" name="friend" id="friend" value="friend">
+    <input type="checkbox" name="friend" id="friend" value="friend"><br>
     <label for="">Friend or colleague</label>
 </fieldset>
 <fieldset>
