--- a/form.html
+++ b/form.html
@@ -68,7 +68,7 @@
     <label for="search_engine">Search Engine</label>
     <input type="checkbox" name="social_media" id="social_media" value="social_media">
     <label for="social_media">Social Media</label>
-    <input type="checkbox" name="email" id="email" value="email">
+    <input type="checkbox" name="email" id="email" value="email"><br>
     <label for="email">Email</label>
     <input type="checkbox" name="friend" id="friend" value="friend"><br>
     <label for="">Friend or colleague</label>
