--- a/form.html
+++ b/form.html
@@ -66,9 +66,9 @@
     <legend>How Did You Hear About Us?</legend>
     <input type="checkbox" name="search_engine" id="search_engine" value="search_engine">
     <label for="search_engine">Search Engine</label>
-    <input type="checkbox" name="social_media" id="social_media" value="social_media">
+    <input type="checkbox" name="social_media" id="social_media" value="social_media"><br>
     <label for="social_media">Social Media</label>
-    <input type="checkbox" name="email" id="email" value="email"><br>
+    <input type="checkbox" name="email2" id="email2" value="email2"><br>
     <label for="email">Email</label>
     <input type="checkbox" name="friend" id="friend" value="friend"><br>
     <label for="">Friend or colleague</label>
