--- a/form.html
+++ b/form.html
@@ -65,8 +65,8 @@
 <fieldset>
     <legend>How Did You Hear About Us?</legend>
     <br>
-    <input type="checkbox" name="search_engine" id="search_engine" value="search_engine"><br>
-    <label for="search_engine">Search Engine</label>
+    <input type="checkbox" name="search_engine" id="search_engine" value="search_engine">
+    <label for="search_engine">Search Engine</label><br>
     <input type="checkbox" name="social_media" id="social_media" value="social_media"><br>
     <label for="social_media">Social Media</label>
     <input type="checkbox" name="email2" id="email2" value="email2"><br>
@@ -76,7 +76,7 @@
 </fieldset>
 <fieldset>
     <legend>Comments</legend>
-    <input type="text" name="comments" id="comments" 
+    <textarea name="comments" id="comments" 
     placeholder="If you have any comments, please enter them here."><br>
 </fieldset>
 <fieldset>
