--- a/form.html
+++ b/form.html
@@ -66,7 +66,7 @@
     <legend>How Did You Hear About Us?</legend>
     <input type="checkbox" name="search_engine" id="search_engine" value="search_engine">
     <label for="search_engine">Search Engine</label><br>
-    <input type="checkbox" name="social_media" id="social_media" value="social_media"><br>
+    <input type="checkbox" name="social_media" id="social_media" value="social_media">
     <label for="social_media">Social Media</label>
     <input type="checkbox" name="email2" id="email2" value="email2"><br>
     <label for="email">Email</label>
