--- a/form.html
+++ b/form.html
@@ -67,11 +67,11 @@
     <input type="checkbox" name="search_engine" id="search_engine" value="search_engine">
     <label for="search_engine">Search Engine</label><br>
     <input type="checkbox" name="social_media" id="social_media" value="social_media">
-    <label for="social_media">Social Media</label>
-    <input type="checkbox" name="email2" id="email2" value="email2"><br>
-    <label for="email">Email</label>
-    <input type="checkbox" name="friend" id="friend" value="friend"><br>
-    <label for="">Friend or colleague</label>
+    <label for="social_media">Social Media</label><br>
+    <input type="checkbox" name="email2" id="email2" value="email2">
+    <label for="email">Email</label><br>
+    <input type="checkbox" name="friend" id="friend" value="friend">
+    <label for="">Friend or colleague</label><br>
 </fieldset>
 <fieldset>
     <legend>Comments</legend>
