--- a/form.html
+++ b/form.html
@@ -71,12 +71,12 @@
     <input type="checkbox" name="email2" id="email2" value="email2">
     <label for="email">Email</label><br>
     <input type="checkbox" name="friend" id="friend" value="friend">
-    <label for="">Friend or colleague</label><br>
+    <label for="friend">Friend or colleague</label><br>
 </fieldset>
 <fieldset>
     <legend>Comments</legend>
-    <textarea name="comments" id="comments" 
-    placeholder="If you have any comments, please enter them here."><br>
+    <textarea name="comments" id="comments"
+        placeholder="If you have any comments, please enter them here."><br>
 </fieldset>
 <fieldset>
     <legend>Submit Your Membership</legend>
