--- a/form.html
+++ b/form.html
@@ -76,7 +76,7 @@
 <fieldset>
     <legend>Comments</legend>
     <textarea name="comments" id="comments"
-        placeholder="If you have any comments, please enter them here."><br>
+        placeholder="If you have any comments, please enter them here."></textarea><br>
 </fieldset>
 <fieldset>
     <legend>Submit Your Membership</legend>
